add functionality to UI

--- a/css/app.css
+++ b/css/app.css
@@ -4,4 +4,8 @@ body {
 #todo-list {
 	margin-bottom: 30px; 
 }
-
+.line-thorugh {
+	color:black;
+	text-decoration:line-through;
+	-webkit-text-fill-color: darkgrey;
+}
